fix: b_o to o in info func

--- a/text/pvm_invocations.tex
+++ b/text/pvm_invocations.tex
@@ -357,7 +357,7 @@ The $\mathtt{gas}$ function, $\Omega_G$ has a parameter list suffixed with an el
     \end{cases} \\
     \forall i \in \N_{|\mathbf{m}|} : \mu'_{o + i} &\equiv \begin{cases}
       \mathbf{m}_i & \when \mathbf{m} \ne \none \wedge \mathbb{Z}_{o \dots+ |\mathbf{m}|} \subset \mathbb{V}^*_{\mu} \\
-      \mu_{b_o + i} & \otherwise
+      \mu_{o + i} & \otherwise
     \end{cases} \\
     \omega'_0 &\equiv \begin{cases}
       \mathtt{OK} & \when \mathbf{m} \ne \none \wedge \mathbb{Z}_{o \dots+ |\mathbf{m}|} \subset \mathbb{V}^*_{\mu} \\
