--- a/text/accumulation.tex
+++ b/text/accumulation.tex
@@ -109,15 +109,15 @@ TODO: Consider reserving some cores for processing the queue.
 
 We define $\mathbf{S}$, the set of all services which will be accumulated in this block; this is all services which have at least one work output within $\mathbf{W}$, together with the privileged services, $\chi_\mathbf{g}$. Formally:
 \begin{align}\label{eq:servicestoaccumulate}
-  \mathbf{S} \equiv \{ \mathbf{r}_s \mid w \in \mathbf{W}, \mathbf{r} \in w_\mathbf{r} \} \cup \keys(\chi_\mathbf{g})
+  \mathbf{S} \equiv \{ \mathbf{r}_s \mid w \in \mathbf{W}, \mathbf{r} \in w_\mathbf{r} \} \cup \keys{\chi_\mathbf{g}}
 \end{align}
 
 We calculate the gas attributable for each service as the sum of each of the service's work outputs' share of their report's elective accumulation gas together with the subtotal of minimum gas requirements:
 \begin{equation}
   G\colon\left\{\;\begin{aligned}
     \N_S &\to \N_G \\
-    \displaystyle s &\mapsto \!\!\sum_{w \in \mathbf{W}}\sum_{\mathbf{r} \in w_\mathbf{r} , \mathbf{r}_s = s}{\!\!\!\!\!\!\!\delta^\dagger[s]_g + \left \lfloor \mathbf{r}_g\cdot\frac{\displaystyle \mathsf{G}_A - \sum_{\mathbf{r} \in w_\mathbf{r}}{\delta^\dagger[\mathbf{r}_s]_g}}{\sum_{\mathbf{r} \in w_\mathbf{r}}{\mathbf{r}_g}} \right \rfloor }
-  \end{aligned}\right.\!\!\!\!\!\!
+    \displaystyle s &\mapsto \subifnone((\chi_\mathbf{g})_s, 0) + \sum_{w \in \mathbf{W}}\sum_{\mathbf{r} \in w_\mathbf{r} , \mathbf{r}_s = s}{\mathbf{r}_g}
+  \end{aligned}\right.
 \end{equation}
 
 \subsection{Wrangling}
@@ -163,7 +163,7 @@ We may then define $A$, the mapping from the index of accumulated services to th
         \isa{\mathbf{n}}{\dict{\N_S}{\mathbb{A}}}\ts\\
         \isa{p&}{\tuple{\isa{m}{\N_S}, \isa{a}{\N_S}, \isa{v}{\N_S}, \isa{\mathbf{g}}{\dict{\N_S}{\N_G}}}}\\
       \end{aligned}\rtuple \\
-      s &\mapsto \Psi_A(\delta^\dagger, s, G(s) + \subifnone((\chi_\mathbf{g})_s, 0), M(s))
+      s &\mapsto \Psi_A(\delta^\dagger, s, G(s), M(s))
     \end{aligned}\right.
 \end{align}
 
