--- a/text/accumulation.tex
+++ b/text/accumulation.tex
@@ -105,6 +105,29 @@ TODO: Specify the accumulation loop.
 
 TODO: Consider reserving some cores for processing the queue.
 
+\subsection{Recursive Accumulation}
+
+\begin{equation}
+  C \equiv \left(\begin{aligned}
+    \dict{\N_S}{\mathbb{A}},
+    (\N_S,\N_S,\N_S,\dict{\N_S}{\N_G}),\\
+    \seq{\mathbb{K}}_\mathsf{V},
+    \seq{\seq{\H}_\mathsf{Q}}_\mathsf{C},
+    \{(\N_S, \H)\}
+  \end{aligned}\right)
+\end{equation}
+
+\begin{equation}
+  Z\colon\left\{\begin{aligned}
+    (\seq{\mathbb{W}}, \N_G, C) &\to C \\
+    (\mathbf{w}, (\mathbf{d}, p, \mathbf{v}, \mathbf{c}, \mathbf{r})) &\mapsto (\mathbf{d}', p', \mathbf{v}', \mathbf{c}', \mathbf{r}')
+  \end{aligned}\right.
+\end{equation}
+
+\subsection{Work Report Selection}
+
+We select a series of work reports from 
+
 \subsection{Gas Accounting}
 
 We define $\mathbf{S}$, the set of all services which will be accumulated in this block; this is all services which have at least one work output within $\mathbf{W}$, together with the privileged services, $\chi_\mathbf{g}$. Formally:
