Accumulation: Memos are 128 bytes

--- a/text/pvm_invocations.tex
+++ b/text/pvm_invocations.tex
@@ -497,7 +497,7 @@ This defines a number of functions broadly of the form $(\xi' \in \Z_G, \omega' 
     \using a &= 2^{32}\cdot a_h + a_l \\
     \using g &= 2^{32}\cdot g_h + g_l \\
     \using \mathbf{t} \in \mathbb{T} \cup \{\error\} &= \begin{cases}
-      (s, d, a, m, g): m = \de(\mu_{o\dots+\mathsf{M}}) &\when \N_{o\dots+\mathsf{M}} \subset \mathbb{V}_{\mu} \\
+      (s, d, a, m, g): m = \mu_{o\dots+\mathsf{M}} &\when \N_{o\dots+\mathsf{M}} \subset \mathbb{V}_{\mu} \\
       \error &\otherwise
     \end{cases} \\
     \using b &= (\mathbf{x}_\mathbf{s})_b - a \\
