fix correct reference to core in rho

--- a/text/judgements.tex
+++ b/text/judgements.tex
@@ -96,7 +96,7 @@ We clear any work-reports which we judged as uncertain or invalid from their cor
 \begin{equation}\label{eq:removenonpositive}
   \forall c \in \N_\mathsf{C} : \rho^\dagger[c] = \begin{cases}
     \none &\!\!\!\!\when \{ (\mathcal{H}(\rho[c]_r), t) \in \verdicts, t < \floor{\nicefrac{2}{3}\mathsf{V}} \} \\
-    \rho_c &\!\!\!\!\otherwise
+    \rho[c] &\!\!\!\!\otherwise
   \end{cases}\!\!\!\!\!\!\!
 \end{equation}
 
