--- a/text/pvm_invocations.tex
+++ b/text/pvm_invocations.tex
@@ -425,7 +425,7 @@ This defines a number of functions broadly of the form $(\xi' \in \Z_G, \omega' 
   $\begin{aligned}
     \using o &= \omega_0 \\
     \using \mathbf{v} &= \begin{cases}
-      \left[\mu_{o + 176i \dots+ 176} \mid i \orderedin \N_\mathsf{V}\right] &\when \mathbb{Z}_{o \dots+ 176\mathsf{V}} \subset \mathbb{V}_{\mu} \\
+      \left[\mu_{o + 336i \dots+ 336} \mid i \orderedin \N_\mathsf{V}\right] &\when \mathbb{Z}_{o \dots+ 336\mathsf{V}} \subset \mathbb{V}_{\mu} \\
       \error &\otherwise
     \end{cases} \\
     (\omega'_0, \mathbf{x}') &= \begin{cases}
@@ -497,7 +497,7 @@ This defines a number of functions broadly of the form $(\xi' \in \Z_G, \omega' 
     \using a &= 2^{32}\cdot a_h + a_l \\
     \using g &= 2^{32}\cdot g_h + g_l \\
     \using \mathbf{t} \in \mathbb{T} \cup \{\error\} &= \begin{cases}
-      (s, d, a, m, g): m = \de(\mu_{o\dots+\mathsf{M}}) &\when \N_{o\dots+\mathsf{M}} \subset \mathbb{V}_{\mu} \\
+      (s, d, a, m, g): m = \mu_{o\dots+\mathsf{M}} &\when \N_{o\dots+\mathsf{M}} \subset \mathbb{V}_{\mu} \\
       \error &\otherwise
     \end{cases} \\
     \using b &= (\mathbf{x}_\mathbf{s})_b - a \\
@@ -512,7 +512,7 @@ This defines a number of functions broadly of the form $(\xi' \in \Z_G, \omega' 
   \end{aligned}$\\
   \cmidrule(lr){1-1}\cmidrule(lr){2-2}
   \makecell*[l]{
-  $\Omega_X(\xi, \omega, \mu, (\mathbf{x}, \mathbf{y}), s)$ \\
+  $\Omega_Q(\xi, \omega, \mu, (\mathbf{x}, \mathbf{y}), s)$ \\
   \texttt{quit} = 12 \\
   $g = 10 + \omega_1 + 2^{32}\cdot\omega_2 $} &
   $\begin{aligned}
