fix(pvm): add serviceindex to Omega_W
Omega_W uses the serviceindex `s` which is not set as argument

--- a/text/pvm_invocations.tex
+++ b/text/pvm_invocations.tex
@@ -316,7 +316,7 @@ The $\mathtt{gas}$ function, $\Omega_G$ has a parameter list suffixed with an el
   \end{aligned}$\\
   \cmidrule(lr){1-1}\cmidrule(lr){2-2}
   \makecell*[l]{
-  $\Omega_W(\xi, \omega, \mu, \mathbf{s})$ \\
+  $\Omega_W(\xi, \omega, \mu, \mathbf{s}, s)$ \\
   \texttt{write} = 3 \\
   $g = 10$
   } &
