fix(pvm): add bold x to Omega I
the info function merges bold d with `x_n` which is not passed as
argument

--- a/text/pvm_invocations.tex
+++ b/text/pvm_invocations.tex
@@ -345,7 +345,7 @@ The $\mathtt{gas}$ function, $\Omega_G$ has a parameter list suffixed with an el
   \end{aligned}$\\
   \cmidrule(lr){1-1}\cmidrule(lr){2-2}
   \makecell*[l]{
-  $\Omega_I(\xi, \omega, \mu, \mathbf{s}, s, \mathbf{d})$ \\
+  $\Omega_I(\xi, \omega, \mu, \mathbf{s}, s, \mathbf{d}, \mathbf{x})$ \\
   \texttt{info} = 4 \\
   $g = 10$} &
   $\begin{aligned}
