fix(pvm): add subscript n to bold x in upgrade fn
the upgrade function was missing the `_n` subscription as `x[s]` is not
a valid "reference"

--- a/text/pvm_invocations.tex
+++ b/text/pvm_invocations.tex
@@ -482,9 +482,9 @@ This defines a number of functions broadly of the form $(\xi' \in \Z_G, \omega' 
     \end{cases} \\
     \using g &= 2^{32}\cdot g_h + g_l \\
     \using m &= 2^{32}\cdot m_h + m_l \\
-    (\omega'_0, \mathbf{x}'[s]_c, \mathbf{x}'[s]_g, \mathbf{x}'[s]_m) &\equiv \begin{cases}
+    (\omega'_0, \mathbf{x}'_{n}[s]_c, \mathbf{x}'_{n}[s]_g, \mathbf{x}'_{n}[s]_m) &\equiv \begin{cases}
       (\mathtt{OK}, c, g, m) &\when c \ne \error\\
-      (\mathtt{OOB}, \mathbf{x}[s]_c, \mathbf{x}[s]_g, \mathbf{x}[s]_m) &\otherwise
+      (\mathtt{OOB}, \mathbf{x}_{n}[s]_c, \mathbf{x}_{n}[s]_g, \mathbf{x}_{n}[s]_m) &\otherwise
     \end{cases}
   \end{aligned}$\\
   \cmidrule(lr){1-1}\cmidrule(lr){2-2}
