fix(pvm): add missing parameter to gamma_s
t is being used when defining a but not provided like in forget

--- a/text/pvm_invocations.tex
+++ b/text/pvm_invocations.tex
@@ -534,7 +534,7 @@ This defines a number of functions broadly of the form $(\xi' \in \Z_G, \omega' 
   \end{aligned}$\\
   \cmidrule(lr){1-1}\cmidrule(lr){2-2}
   \makecell*[l]{
-  $\Omega_S(\xi, \omega, \mu, (\mathbf{x}, \mathbf{y}))$ \\
+  $\Omega_S(\xi, \omega, \mu, (\mathbf{x}, \mathbf{y}), t)$ \\
   \texttt{solicit} = 13 \\
   $g = 10$} &
   $\begin{aligned}
