--- a/preamble.tex
+++ b/preamble.tex
@@ -167,6 +167,11 @@
 \newcommand*{\accumulated}{\xi}
 \newcommand*{\ready}{\vartheta}
 
+\newcommand*{\partialstate}{\mathbb{U}}
+\newcommand*{\defxfer}{\mathbb{T}}
+\newcommand*{\defxfers}{\seq{\defxfer}}
+\newcommand*{\beefycommitmap}{\mathbf{C}}
+
 \newcommand*{\jamdraftversion}{\input{VERSION}\!\!\!}
 \newcommand*{\jamdraftversionstring}{\jamdraftversion}
 
