--- a/text/overview.tex
+++ b/text/overview.tex
@@ -48,7 +48,7 @@ Much as in the \emph{YP}, we specify $\Upsilon$ as the implication of formulatin
 \begin{align}\label{eq:transitionfunctioncomposition}
   \tau' &\prec \mathbf{H} \\
   \beta^\dagger &\prec (\mathbf{H}, \beta) \label{eq:betadagger} \\
-  \beta' &\prec (\mathbf{H}, \xtguarantees, \beta^\dagger, \mathbf{C}) \\
+  \beta' &\prec (\mathbf{H}, \xtguarantees, \beta^\dagger, \beefycommitmap) \\
   \gamma' &\prec (\mathbf{H}, \tau, \xttickets, \gamma, \iota, \eta', \kappa') \\
   \eta' &\prec (\mathbf{H}, \tau, \eta) \\
   \kappa' &\prec (\mathbf{H}, \tau, \kappa, \gamma, \psi') \\
@@ -63,7 +63,7 @@ Much as in the \emph{YP}, we specify $\Upsilon$ as the implication of formulatin
     \chi' \\
     \iota' \\
     \varphi' \\
-    \mathbf{C}
+    \beefycommitmap
   \end{rcases*} &\prec (\xtassurances, \rho', \delta^\dagger, \chi, \iota, \varphi) \\
   \alpha' &\prec (\mathbf{H}, \xtguarantees, \varphi', \alpha) \\
   \pi' &\prec (\xtguarantees, \xtpreimages, \xtassurances, \xttickets, \tau, \kappa', \pi, \mathbf{H})
