--- a/text/serialization.tex
+++ b/text/serialization.tex
@@ -22,7 +22,7 @@ We define anonymous tuples to be encoded as the concatenation of their encoded e
 
 Passing multiple arguments to the serialization functions is equivalent to passing a tuple of those arguments. Formally:
 \begin{align}
-  \se(a, b, c, \dots) &\equiv \se(\tup{a, b, c, \dots})
+  \se(a, b, \dots) &\equiv \se(\tup{a, b, \dots})
 \end{align}
 
 \subsubsection{Integer Encoding}
