--- a/text/accumulation.tex
+++ b/text/accumulation.tex
@@ -104,7 +104,7 @@ Firstly, while we have a well-known gas-limit for each work-item to be accumulat
 
 Secondly, since \textsc{pvm} setup cannot be expected to be zero-cost, we wish to amortize this cost over as many work-items as possible. This can be done by aggregating work-items associated with the same service into the same \textsc{pvm} invocation. This implies a non-sequential execution pattern.
 
-We resolve this by defining a function $\Delta^+$ which accumulates work-reports in a sequential manner, and which itself utilizes a function $\Delta^*$ which accumulates work-reports in a non-sequential, service-aggregated manner.
+We resolve this by defining a function $\Delta_+$ which accumulates work-reports in a sequential manner, and which itself utilizes a function $\Delta_*$ which accumulates work-reports in a non-sequential, service-aggregated manner.
 
 Only once all such accumulation is executed do we integrate the results and thus define the relevent posterior state items. In doing so we also integrate the consequences of any \emph{deferred-transfers} implied by accumulation.
 
@@ -129,9 +129,9 @@ Finally, we denote the set of service/hash pairs, utilized as a service-indexed 
   \servouts \equiv \{(\N_S, \H)\}
 \end{equation}
 
-We define the outer accumulation function $\Delta^+$ which transforms a gas-limit, a sequence of work-reports, an initial partial-state and a dictionary of services enjoying free accumulation, into a tuple of the total gas utilized in \textsc{pvm} execution $u$, a posterior state-context $(\mathbf{x}', \mathbf{d}', \mathbf{i}', \mathbf{q}')$ and the resultant deferred-transfers $\defxfer$ and accumulation-output pairings $\servouts$:
+We define the outer accumulation function $\Delta_+$ which transforms a gas-limit, a sequence of work-reports, an initial partial-state and a dictionary of services enjoying free accumulation, into a tuple of the total gas utilized in \textsc{pvm} execution $u$, a posterior state-context $(\mathbf{x}', \mathbf{d}', \mathbf{i}', \mathbf{q}')$ and the resultant deferred-transfers $\defxfer$ and accumulation-output pairings $\servouts$:
 \begin{equation}
-  \Delta^+\colon\left\{\begin{aligned}
+  \Delta_+\colon\left\{\begin{aligned}
     &(\N_G, \seq{\mathbb{W}}, \partialstate, \dict{\N_S}{\N_G}) \to (\N, \partialstate, \defxfers, \servouts) \\
     &(g, \mathbf{w}, \mathbf{o}, \mathbf{f}) \!\mapsto\! \begin{cases}
       (0, \mathbf{o}, [], \{\}) &
@@ -140,37 +140,37 @@ We define the outer accumulation function $\Delta^+$ which transforms a gas-limi
         \otherwise\!\!\!\!\!\!\!\! \\
     \end{cases} \\
     &\quad\where i = \max(\N_{|\mathbf{w}| + 1}): \sum_{w \in \mathbf{w}_{\dots i}}\sum_{r \in w_\mathbf{r}}(r_g) \le g \\
-    &\quad\also (g^*, \mathbf{o}^*, \mathbf{t}^*, \mathbf{b}^*) = \Delta^*(\mathbf{o}, \mathbf{w}_{\dots i}, \mathbf{f}) \\
-    &\quad\also (j, \mathbf{o}', \mathbf{t}, \mathbf{b}) = \Delta^+(g - g^*, \mathbf{w}_{i\dots}, \mathbf{o}^*, \{\})
+    &\quad\also (g^*, \mathbf{o}^*, \mathbf{t}^*, \mathbf{b}^*) = \Delta_*(\mathbf{o}, \mathbf{w}_{\dots i}, \mathbf{f}) \\
+    &\quad\also (j, \mathbf{o}', \mathbf{t}, \mathbf{b}) = \Delta_+(g - g^*, \mathbf{w}_{i\dots}, \mathbf{o}^*, \{\})
   \end{aligned}\right.
 \end{equation}
 
-We come to define the parallelized accumulation function $\Delta^*$ which, with the help of the single-service accumulation function $\Delta^1$, transforms an initial state-context, together with a sequence of work-reports and a dictionary of privileged always-accumulate services, into a tuple of the total gas utilized in \textsc{pvm} execution $u$, a posterior state-context $(\mathbf{x}', \mathbf{d}', \mathbf{i}', \mathbf{q}')$ and the resultant accumulation-output pairings $\mathbf{b}$ and deferred-transfers $\wideparen{\mathbf{t}}$:
+We come to define the parallelized accumulation function $\Delta_*$ which, with the help of the single-service accumulation function $\Delta_1$, transforms an initial state-context, together with a sequence of work-reports and a dictionary of privileged always-accumulate services, into a tuple of the total gas utilized in \textsc{pvm} execution $u$, a posterior state-context $(\mathbf{x}', \mathbf{d}', \mathbf{i}', \mathbf{q}')$ and the resultant accumulation-output pairings $\mathbf{b}$ and deferred-transfers $\wideparen{\mathbf{t}}$:
 \begin{equation}
-  \Delta^*\colon\left\{\;\begin{aligned}
+  \Delta_*\colon\left\{\;\begin{aligned}
     &(\partialstate, \seq{\mathbb{W}}, \dict{\N_S}{\N_G}) \to (\N_G, \partialstate, \defxfers, \servouts) \\
     &(\mathbf{o}, \mathbf{w}, \mathbf{f}) \mapsto (u, (\mathbf{x}', \mathbf{d}', \mathbf{i}', \mathbf{q}'), \wideparen{\mathbf{t}}, \mathbf{b})\!\!\!\!\!\!\\
     &\text{where:}\\
     &\ \begin{aligned}
       \mathbf{s} &= \{ \mathbf{r}_s \mid w \in \mathbf{w}, \mathbf{r} \in w_\mathbf{r} \} \cup \keys{\mathbf{f}} \\
-      u &= \sum_{s \in \mathbf{s}}(\Delta^1(\mathbf{o}, \mathbf{w}, s)_u) \\
-      \mathbf{b} &= \{ (s, b) \mid s \in \mathbf{s},\, b = \Delta^1(\mathbf{o}, \mathbf{w}, s)_b,\, b \ne \none \} \\
-      \mathbf{t} &= [\Delta^1(\mathbf{o}, \mathbf{w}, s)_\mathbf{t} \mid s \orderedin \mathbf{s}] \\
+      u &= \sum_{s \in \mathbf{s}}(\Delta_1(\mathbf{o}, \mathbf{w}, s)_u) \\
+      \mathbf{b} &= \{ (s, b) \mid s \in \mathbf{s},\, b = \Delta_1(\mathbf{o}, \mathbf{w}, s)_b,\, b \ne \none \} \\
+      \mathbf{t} &= [\Delta_1(\mathbf{o}, \mathbf{w}, s)_\mathbf{t} \mid s \orderedin \mathbf{s}] \\
       &((m, a, v, \mathbf{z}), \mathbf{d}, \mathbf{i}, \mathbf{q}) = \mathbf{o} \\
-      \mathbf{x}' &= (\Delta^1(\mathbf{o}, \mathbf{w}, m)_\mathbf{o})_\mathbf{x} \\
-      \mathbf{i}' &= (\Delta^1(\mathbf{o}, \mathbf{w}, a)_\mathbf{o})_\mathbf{i} \\
-      \mathbf{q}' &= (\Delta^1(\mathbf{o}, \mathbf{w}, v)_\mathbf{o})_\mathbf{q} \\
-      \mathbf{d}' &= \{ s \mapsto \mathbf{d}_s \mid s \in \keys{\mathbf{d}} \setminus \mathbf{s} \} \cup \bigcup_{s \in \mathbf{s}}((\Delta^1(\mathbf{o}, \mathbf{w}, s)_\mathbf{o})_\mathbf{d})\!\!\!\!\!\!\!\!
+      \mathbf{x}' &= (\Delta_1(\mathbf{o}, \mathbf{w}, m)_\mathbf{o})_\mathbf{x} \\
+      \mathbf{i}' &= (\Delta_1(\mathbf{o}, \mathbf{w}, a)_\mathbf{o})_\mathbf{i} \\
+      \mathbf{q}' &= (\Delta_1(\mathbf{o}, \mathbf{w}, v)_\mathbf{o})_\mathbf{q} \\
+      \mathbf{d}' &= \{ s \mapsto \mathbf{d}_s \mid s \in \keys{\mathbf{d}} \setminus \mathbf{s} \} \cup \bigcup_{s \in \mathbf{s}}((\Delta_1(\mathbf{o}, \mathbf{w}, s)_\mathbf{o})_\mathbf{d})\!\!\!\!\!\!\!\!
     \end{aligned}
   \end{aligned}\right.
 \end{equation}
 
-We note that all newly added service indices, defined in the above context as $\bigcup_{s \in \mathbf{s}}\keys{(\Delta^1(\mathbf{o}, \mathbf{w}, s)_\mathbf{o})_\mathbf{d}} \setminus \mathbf{s}$, must not conflict with the indices of existing services $\keys{\delta}$ or other newly added services. This should never happen, since new indices are explicitly selected to avoid such conflicts, but in the unlikely event it happens, the block must be considered invalid.
+We note that all newly added service indices, defined in the above context as $\bigcup_{s \in \mathbf{s}}\keys{(\Delta_1(\mathbf{o}, \mathbf{w}, s)_\mathbf{o})_\mathbf{d}} \setminus \mathbf{s}$, must not conflict with the indices of existing services $\keys{\delta}$ or other newly added services. This should never happen, since new indices are explicitly selected to avoid such conflicts, but in the unlikely event it happens, the block must be considered invalid.
 
-The single-service accumulation function, $\Delta^1$, transforms an initial state-context, sequence of work-reports and a service index into an alterations state-context, a sequence of \emph{transfers}, a possible accumulation-output and the actual \textsc{pvm} gas used. This function wrangles the work-items of a particular service from a set of work-reports and invokes \textsc{pvm} execution with said data:
+The single-service accumulation function, $\Delta_1$, transforms an initial state-context, sequence of work-reports and a service index into an alterations state-context, a sequence of \emph{transfers}, a possible accumulation-output and the actual \textsc{pvm} gas used. This function wrangles the work-items of a particular service from a set of work-reports and invokes \textsc{pvm} execution with said data:
 \begin{align}
   &\mathbb{O} \equiv \tuple{\isa{o}{\Y \cup \mathbb{J}}, \isa{l}{\H}, \isa{k}{\H}, \isa{a}{\Y}} \\
-  &\Delta^1 \colon \left\{\;\begin{aligned}
+  &\Delta_1 \colon \left\{\;\begin{aligned}
     &\begin{aligned}
       (\partialstate, \seq{\mathbb{W}}, \dict{\N_S}{\N_G}, \N_S) &\to \tuple{
         \begin{aligned}
@@ -178,12 +178,12 @@ The single-service accumulation function, $\Delta^1$, transforms an initial stat
           &\isa{b}{\H\bm{?}}, \isa{u}{\N_G}
         \end{aligned}
       } \\
-      (\mathbf{o}, \mathbf{w}, \mathbf{f}, s) &\mapsto \Psi_A(\mathbf{o}, s, g, \mathbf{o})
+      (\mathbf{o}, \mathbf{w}, \mathbf{f}, s) &\mapsto \Psi_A(\mathbf{o}, s, g, \mathbf{p})
     \end{aligned} \\
     &\text{where:} \\
     &\ \begin{aligned}
       g &= \subifnone(\mathbf{f}_s, 0) + \!\!\!\!\sum_{w \in \mathbf{w}, \mathbf{r} \in w_\mathbf{r} , \mathbf{r}_s = s}\!\!\!\!(\mathbf{r}_g) \\
-      \mathbf{o} &= \left[ \tup{\begin{alignedat}{3}
+      \mathbf{p} &= \left[ \tup{\begin{alignedat}{3}
         \is{o&}{\mathbf{r}_o}\ts\is{&l&}{\mathbf{r}_p}\ts\\
         \is{a&}{w_o}\ts\is{&k&}{(w_s)_h}
       \end{alignedat}}
@@ -194,7 +194,7 @@ The single-service accumulation function, $\Delta^1$, transforms an initial stat
   \end{aligned}\right.\!\!\!\!
 \end{align}
 
-This introduces $\mathbb{O}$, the set of wrangled \emph{operand tuples}, used as an operand to the \textsc{pvm} Accumulation function $\Psi_A$. It also draws upon $g$, the gas limit implied by the work-reports and gas-privileges for $s$ and $\mathbf{o}$, a rephrasing of the work-items for $s$ within $\mathbf{w}$ into a sequence of operand tuples $\mathbb{O}$.
+This introduces $\mathbb{O}$, the set of wrangled \emph{operand tuples}, used as an operand to the \textsc{pvm} Accumulation function $\Psi_A$. It also draws upon $g$, the gas limit implied by the work-reports and gas-privileges for $s$ and $\mathbf{p}$, a rephrasing of the work-items for $s$ within $\mathbf{w}$ into a sequence of operand tuples $\mathbb{O}$.
 
 TODO: Alter $\Phi_A$ to agree with the new function signature. Input has changed to accept $\mathbf{o}$ (the state). Output also now uses context. Context's service map must provide only itself if still extant and any created services.
 
@@ -204,9 +204,9 @@ TODO: Consider reserving some cores for processing the queue.
 
 \subsection{Deferred Transfers and State Integration}
 
-Given the result of the top-level $\Delta^+$, we may define the posterior state $\chi'$, $\varphi'$ and $\iota'$ as well as the second intermediate state of the service-accounts $\delta'$ and the \textsc{Beefy} commitment map $\beefycommitmap$:
+Given the result of the top-level $\Delta_+$, we may define the posterior state $\chi'$, $\varphi'$ and $\iota'$ as well as the second intermediate state of the service-accounts $\delta'$ and the \textsc{Beefy} commitment map $\beefycommitmap$:
 \begin{align}
-  \using (n, \mathbf{o}, \mathbf{t}, \beefycommitmap) &= \Delta^+(\mathsf{G}_T, \mathbf{W}^*, (\chi, \delta^\dagger, \iota, \varphi), \chi_\mathbf{g}) \\
+  \using (n, \mathbf{o}, \mathbf{t}, \beefycommitmap) &= \Delta_+(\mathsf{G}_T, \mathbf{W}^*, (\chi, \delta^\dagger, \iota, \varphi), \chi_\mathbf{g}) \\
   (\chi', \delta^\ddagger, \iota', \varphi') &\equiv \mathbf{o}
 \end{align}
 
