Some work on off-chain

--- a/preamble.tex
+++ b/preamble.tex
@@ -156,6 +156,7 @@
 \newcommand*{\wp¬authparam}{\mathbf{p}}
 \newcommand*{\wp¬context}{\mathbf{x}} % Consider rename to \mathbf{c}
 \newcommand*{\wp¬workitems}{\mathbf{w}}
+\newcommand*{\wp¬srlookup}{\mathbf{l}}
 
 \newcommand*{\wp¬authorizer}{a}
 \newcommand*{\wp¬authcode}{\mathbf{c}}
